public interface ConnectionFactory {
    Connection buildConnection();
}
